--- a/src/Style/BusinessDetails.css
+++ b/src/Style/BusinessDetails.css
@@ -230,6 +230,9 @@ input::-webkit-input-placeholder {
   margin-left: 40px;
   margin-top: 10px;
 }
+.urlLoader{
+  margin-top: 2.3em;
+}
 
 @media only screen and (max-width: 768px) {
   .staticText4 {
