--- a/src/Components/BusinessDetails/BusinessDetails.css
+++ b/src/Components/BusinessDetails/BusinessDetails.css
@@ -232,7 +232,7 @@ input::-webkit-input-placeholder {
   margin-top: 10px;
 }
 .urlLoader {
-  margin-top: 3em;
+  margin-top: 2.3vw;
 }
 
 .searchButton {
@@ -241,7 +241,7 @@ input::-webkit-input-placeholder {
   border: 0px solid #dcba80;
   width: 60px;
   height: 60px;
-  margin-top: 40px;
+  margin-top: 2.3vw;
 }
 .searchButton:hover {
   cursor: pointer;
