AB4T-I13 - bug fix

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -54,6 +54,10 @@
   }
 } */
 
+.LogoIcon {
+  cursor: pointer !important;
+}
+
 @media (max-width: 1199px) {
   .fontOswald {
     font-size: 15px;
