--- a/src/Components/PurchaseKit/PurchaseKit.css
+++ b/src/Components/PurchaseKit/PurchaseKit.css
@@ -70,6 +70,13 @@
   font-size: 16px;
   margin-bottom: 12px;
 }
+.purchasehead4 {
+  color: grey;
+  font-family: oswald;
+  font-size: 16px;
+  margin-bottom: 12px;
+  margin-left: 45px !important;
+}
 .purchaseInput {
   border-width: 1px;
   border-color: #d8c5a6 !important;
