--- a/src/Components/BusinessDetails/BusinessDetails.css
+++ b/src/Components/BusinessDetails/BusinessDetails.css
@@ -16,10 +16,20 @@
   align-items: center;
   margin-top: 30px;
 }
+.urlRow1 {
+  display: flex;
+  margin-top: 30px;
+}
 .BDstaticText4 {
   font-size: 16px;
   font-family: Domine;
-  margin-top: 0;
+  margin-top: 0px !important;
+  font-weight: bold;
+}
+.BDstaticText5 {
+  font-size: 16px;
+  font-family: Domine;
+  margin-top: 18px !important;
   font-weight: bold;
 }
 .customURL {
@@ -62,7 +72,8 @@
   width: 22vw !important;
   height: 60px !important;
   margin-bottom: 8px;
-  margin-top: 2.3vw;
+  margin-top: 0;
+  /* margin-top: 2.3vw; */
   font-weight: bold;
   font-size: 16px;
   font-family: Domine;
