--- a/src/Components/PaymentConfirmation/PaymentConfirmation.css
+++ b/src/Components/PaymentConfirmation/PaymentConfirmation.css
@@ -13,6 +13,12 @@
   text-align: center;
   color: #4ba380;
 }
+.paymentConfirmationFaliure {
+  font-family: Oswald;
+  font-size: 2.5em;
+  text-align: center;
+  color: #ef7070;
+}
 .customURLAssigned {
   background: #ffffff;
   width: 26em;
@@ -146,6 +152,22 @@
   width: 10em;
   font-size: 1.3em;
 }
+.retryPaymentButton {
+  text-align: center;
+  margin-top: 1em;
+  margin-bottom: 3em;
+  background: #241f20;
+  color: white;
+  width: 300px;
+  padding: 1.2em;
+  font-family: Oswald;
+  font-size: 20px;
+  letter-spacing: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  cursor: pointer;
+  font-weight: 500;
+}
 
 @media only screen and (max-width: 768px) {
   .pcFooter {
@@ -216,6 +238,12 @@
     font-size: 2em;
     text-align: center;
     color: #4ba380;
+  }
+  .paymentConfirmationFaliure {
+    font-family: Oswald;
+    font-size: 2em;
+    text-align: center;
+    color: #ef7070;
   }
   .customURLAssigned {
     background: #ffffff;
