--- a/src/Components/ConfirmDetails/ConfirmDetails.css
+++ b/src/Components/ConfirmDetails/ConfirmDetails.css
@@ -338,6 +338,8 @@ input:disabled {
   .SubText {
     font-size: 15px;
     font-family: Domine;
+    width: 96% !important;
+    margin-left: 1.3%;
   }
   .passwordForgotLink {
     font-family: Domine;
@@ -404,6 +406,10 @@ input:disabled {
     margin-bottom: 125px;
     width: 1092px;
   } */
+
+  .errorMes {
+    margin-left: 0px !important;
+  }
 }
 
 .displayNote {
@@ -457,10 +463,10 @@ input:disabled {
 
 @media (max-width: 479px) {
   .Input {
-    width: 100% !important;
+    width: 96% !important;
   }
   .head1,
   .head2 {
-    font-size: 22px;
+    font-size: 25px;
   }
 }
