--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -9,6 +9,10 @@
   font-family: oswald;
   font-size: 18px;
 }
+.fontOswald1 {
+  font-family: oswald;
+  font-size: 50px;
+}
 .arrowIcon3 {
   margin-top: 5px;
   text-align: right;
@@ -16,8 +20,8 @@
   cursor: pointer;
 }
 .arrowIcon3 svg {
-  width: 31px;
-  height: 60px;
+  width: 35px;
+  height: 80px;
 }
 .headerMarginTop {
   padding-top: 20px;
@@ -36,7 +40,7 @@
   fill: #034691 !important;
 }
 .HomeContainer {
-  padding-bottom: 50px;
+  padding-bottom: 30px;
 }
 /* @media only screen and (max-width: 550px) {
   .mobileMargin {
@@ -88,6 +92,7 @@
   }
   .HomeContainer {
     padding-left: 20px;
+    overflow: hidden;
   }
 }
 
@@ -105,22 +110,32 @@
   }
   .btm-list-blk {
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 200px;
     margin-top: 30px;
     background: rgb(232, 224, 221);
     margin-left: -20px;
     margin-right: -15px;
+    padding-left: 10px;
   }
   .btm-list-blk .btm-list-inner {
     padding-left: 30px;
   }
-  .btm-list-blk .btm-list-inner .mobileStepHead {
+  .btm-list-blk .btm-list-inner{
     font-family: oswald;
     font-weight: bold;
+  }
+  .mobileStep {
+    margin-top: 20px;
   }
 }
 @media (max-width: 480px) {
   .arrowIcon3 svg {
-    height: 30px;
+    height: 22px;
+    margin-top: 0.5em;
+  }
+  .mobileStepHead {
+    font-family: oswald;
+    font-size: 22px;
+    font-weight: 400;
   }
 }
