--- a/src/Components/ConfirmDetails/ConfirmDetails.css
+++ b/src/Components/ConfirmDetails/ConfirmDetails.css
@@ -449,7 +449,19 @@ input:disabled {
     margin-top: 30px;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 768px) {
+  .componentMargin1,
+  .componentMargin2 {
+    margin-top: 50px;
+    margin-left: 50px;
+  }
+  .ReCAPTCHA {
+    transform: scale(1.76);
+    transform-origin: 0 0;
+    width: 230px;
+    overflow: hidden !important;
+  }
+  
 }
 @media (max-width: 639px) {
   .mobileDisplayWidth {
@@ -468,7 +480,7 @@ input:disabled {
   }
   .head1,
   .head2 {
-    font-size: 23px;
+    font-size: 28px;
   }
 }
 @media (max-width: 414px) {
