--- a/src/Components/MobileHeader/Header.css
+++ b/src/Components/MobileHeader/Header.css
@@ -21,15 +21,15 @@
   margin-top: -11vh;
   margin-left: -2.5vh;
 }
+*/
 
 .AgreementHeader {
-  font-size: 1.3em;
-  font-weight: 200;
+  font-size: 1.1em;
+  font-weight: 400;
   font-family: oswald;
-  background: #e8e0dd;
-  margin-left: 3em;
-  margin-top: -3.5em;
-} */
+  margin-left: 16%;
+ margin-top: -25px;
+} 
 
 .LogoIcon svg {
   width: 320px;
