--- a/src/Components/BusinessDetails/BusinessDetails.css
+++ b/src/Components/BusinessDetails/BusinessDetails.css
@@ -1,7 +1,7 @@
 .BDcomponentMargin {
   margin-top: 32px;
 }
-.BDmobileComponent{
+.BDmobileComponent {
   margin-left: 10px;
 }
 .BDhead1 {
@@ -271,7 +271,51 @@ input::-webkit-input-placeholder {
   width: 30px;
 }
 
+.BDerrorMes {
+  font-size: 12px;
+  color: red;
+  font-family: Domine;
+  width: 1600px !important;
+  margin-top: 5px;
+  text-align: left;
+  margin-left: -108px !important;
+}
+
 @media only screen and (max-width: 768px) {
+  .ipad-not-available-text {
+    margin-top: 1px !important;
+    margin-left: 10px !important;
+  }
+  .mobileAvailabilityText {
+    margin-top: 5px;
+    position: relative;
+    left: 55%;
+  }
+  .searchButton {
+    background: #dcba80;
+    text-align: center;
+    border: 0px solid #dcba80;
+    width: 60px;
+    height: 56px;
+    margin-top: 18px;
+    margin-left: 10px;
+  }
+  .BDstaticText4 {
+    font-size: 16px;
+    font-family: Domine;
+    margin-top: 0px !important;
+    font-weight: bold;
+  }
+  .BDstaticText5 {
+    font-size: 16px;
+    font-family: Domine;
+    margin-top: 38px !important;
+    font-weight: bold;
+  }
+  .BDcomponentMargin {
+    margin-top: 32px;
+    margin-left: 2.5em;
+  }
   .staticText4 {
     font-size: 16px;
     font-family: Domine;
@@ -283,10 +327,10 @@ input::-webkit-input-placeholder {
     border-width: 1px;
     border-color: #d8c5a6;
     border-radius: 0;
-    width: 336px !important;
+    width: 296px !important;
     height: 56px !important;
     margin-bottom: 8px;
-    margin-top: 24px;
+    margin-top: 18px;
     font-weight: bold;
     font-size: 16px;
     font-family: Domine;
@@ -323,7 +367,6 @@ input::-webkit-input-placeholder {
   }
 
   .availableIcon {
-    margin-top: 62px;
     color: #4ba380;
   }
   .notAvailableIcon {
@@ -332,10 +375,10 @@ input::-webkit-input-placeholder {
   }
 
   .availableText {
-    margin-top: 90px;
+    margin-top: -23px;
     font-family: oswald;
     font-size: 16px;
-    margin-left: 10px;
+    margin-left: 35px;
     width: 160px;
   }
 
@@ -346,12 +389,12 @@ input::-webkit-input-placeholder {
     margin-top: 10px;
   }
 
-  .errorMes {
+  .BDerrorMes {
     font-size: 12px;
     color: red;
     font-family: Domine;
     width: 1600px !important;
-    margin-left: 0;
+    margin-left: 0px !important;
     margin-top: 24px;
   }
 
@@ -475,7 +518,6 @@ input::-webkit-input-placeholder {
   }
 }
 @media only screen and (max-width: 550px) {
-
   .searchButton {
     background: #dcba80;
     text-align: center;
@@ -552,7 +594,7 @@ input::-webkit-input-placeholder {
     margin-top: -30px;
   }
 
-  .errorMes {
+  .BDerrorMes {
     font-size: 12px;
     color: red;
     font-family: Domine;
@@ -698,7 +740,7 @@ input::-webkit-input-placeholder {
   }
   .mobileAvailabilityText {
     margin-top: 88px;
-    margin-left: 176px;
+    margin-left: -30px !important;
   }
 
   .mobileSsnToggle {
