--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -105,30 +105,28 @@
   .grey {
     background-color: grey;
     padding-top: 3px;
-    width: 224px;
-    /* height: 200px; */
+    width: 200px;
+    height: 50px;
     position: fixed;
     bottom: 0;
   }
   .emptyWidth {
     width: 0;
   }
-  /* .leftTextButton {
+  .leftTextButton {
     color: white;
-    margin: 1%;
     font-size: 18px;
-    font-weight: 400;
-    margin-top: 1.5%;
-    margin-bottom: 1%;
     font-family: oswald;
-    width: 546px;
-    margin-left: 24px;
-  } */
+    margin-top: 3px !important;
+  }
   .leftTextButton:hover {
     cursor: pointer;
   }
   .mobileLeftMargin {
-    margin-left: 138px;
+    margin-left: 100px;
+    font-size: 18px;
+    font-family: oswald;
+    margin-top: -2px !important;
   }
 }
 @media (max-width: 639px) {
