mobile view - header

--- a/src/Components/ConfirmDetails/ConfirmDetails.css
+++ b/src/Components/ConfirmDetails/ConfirmDetails.css
@@ -313,8 +313,11 @@ input:disabled {
   .mobileComponent {
     margin-top: 20px;
   }
+  .CEmobileComponent{
+    margin-top: 5.5em;
+  }
   .mobileComponent1 {
-    margin-top: 20px;
+    margin-top: 5.5em;
     margin-bottom: 6em;
     margin-right: 10px;
   }
