--- a/src/Components/MobileHeader/Header.css
+++ b/src/Components/MobileHeader/Header.css
@@ -1,4 +1,4 @@
-.head-stepper-font{
+.head-stepper-font {
   font-family: oswald;
   font-size: 15px;
   white-space: nowrap;
@@ -28,8 +28,9 @@
   font-weight: 400;
   font-family: oswald;
   margin-left: 16%;
- margin-top: -25px;
-} 
+  margin-top: -25px;
+  width:100% !important;
+}
 
 .LogoIcon svg {
   width: 320px;
@@ -37,8 +38,29 @@
 }
 
 .mobileHeaderHeight {
-  height: 70px !important;
-  margin-bottom: 2em;
+  height: 110px !important;
+  margin-bottom: 1.3em !important;
+  background: #e8e0dd;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right:0;
+  padding-top: 20px !important;
+  padding-left: 20px !important;
+  padding-bottom: 40px !important;
+}
+
+.mobileHeaderHeight1 {
+  height: 50px !important;
+  margin-bottom: 1.3em !important;
+  background: #e8e0dd;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right:0;
+  padding-top: 20px !important;
+  padding-left: 20px !important;
+  padding-bottom: 40px !important;
 }
 
 .MuiPaper-root {
