--- a/src/Components/Agreement/Agreement.css
+++ b/src/Components/Agreement/Agreement.css
@@ -5,7 +5,7 @@
   margin-left: 20px;
   margin-right: 10px;
   margin-bottom: 3em;
-  margin-top: -40px;
+  margin-top: 3em;
 }
 .AGhead1 {
   font-size: calc(6px + 2vw);
