--- a/src/Components/PurchaseKit/PurchaseKit.css
+++ b/src/Components/PurchaseKit/PurchaseKit.css
@@ -333,8 +333,7 @@
   }
   .mobileTotalValue {
     width: 80px;
-    position: absolute;
-    right: 10%;
+    margin-left: 40vw;
     text-align: right;
   }
   .mobileTotalPanel {
