--- a/src/Components/BusinessDetails/BusinessDetails.css
+++ b/src/Components/BusinessDetails/BusinessDetails.css
@@ -405,14 +405,15 @@ input::-webkit-input-placeholder {
   .businessButton1 {
     background: #dcba80;
     text-align: center;
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding-top: 14px;
+    padding-bottom: 13px;
     padding-left: 8px;
     padding-right: 8px;
     color: white;
     font-size: 16px;
     margin-top: 8px;
     font-family: Domine;
+    width:100%;
   }
   .businessButton1:hover {
     cursor: pointer;
@@ -429,6 +430,7 @@ input::-webkit-input-placeholder {
     font-size: 16px;
     margin-top: 8px;
     font-family: Domine;
+    width:100%;
   }
 
   .businessButton2:hover {
@@ -447,13 +449,31 @@ input::-webkit-input-placeholder {
     border-color: #d8c5a6;
     border-style: solid;
     font-size: 16px;
-    width: 224px;
+    width: 100%;
     height: 50px;
   }
   .businessButtonNotActive:hover {
     cursor: pointer;
   }
-
+  .businessButtonNotActive1 {
+    background: #f7f3f2;
+    color: #707070;
+    border-width: 2px;
+    border-color: #d8c5a6;
+    border-style: solid;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 8px;
+    padding-right: 8px;
+    font-size: 16px;
+    margin-top: 8px;
+    font-family: Domine;
+    width:100%;
+  }
+  .businessButtonNotActive1:hover {
+    cursor: pointer;
+  }
   .ssn {
     font-family: oswald;
     font-size: 20px;
