--- a/src/Components/ConfirmDetails/ConfirmDetails.css
+++ b/src/Components/ConfirmDetails/ConfirmDetails.css
@@ -1,6 +1,7 @@
 .ReCAPTCHA {
   transform: scale(1.33);
   transform-origin: 0 0;
+  overflow: hidden;
 }
 .componentMargin1 {
   margin-top: 20px;
@@ -518,7 +519,8 @@ input:disabled {
   .ReCAPTCHA {
     transform: scale(1.76);
     transform-origin: 0 0;
-    width: 230px;
+    width: 244px !important;
+    overflow: hidden;
   }
 }
 @media (max-width: 639px) {
@@ -542,20 +544,31 @@ input:disabled {
 }
 @media (max-width: 414px) {
   .ReCAPTCHA {
-    transform: scale(1.2);
+    transform: scale(1.5);
     transform-origin: 0 0;
+     width: 244px !important;
   }
 }
 
 @media (max-width: 375px) {
   .ReCAPTCHA {
-    transform: scale(1.1);
+    transform: scale(1.36);
     transform-origin: 0 0;
+    width: 244px !important;
   }
 }
 @media (max-width: 360px) {
   .ReCAPTCHA {
-    transform: scale(1.05);
+    transform: scale(1.3);
     transform-origin: 0 0;
+    width: 244px !important;
   }
 }
+/* @media (max-width: 1440px) {
+  .ReCAPTCHA {
+    transform: scale(1.65);
+    transform-origin: 0 0;
+    width: 245px;
+    overflow: hidden;
+  }
+} */
